Updates to tip430

--- a/tip/430.md
+++ b/tip/430.md
@@ -25,7 +25,8 @@ This TIP targets TCL Version 8.7
 
 Tcl/Tk relies on the presence of a file system containing Tcl scripts for
 bootstrapping the interpreter.  When dealing with code packed in a
-self-contained executable, a chicken-and-egg problem arises when developers
+self-contained executable, or a dynamic library, a chicken-and-egg problem
+arises when developers
 try to provide this bootstrap from their attached VFS with extensions like
 TclVfs.  TclVfs runs in the Tcl interpreter.  The interpreter needs
 _init.tcl_, which would mean that the filesystem containing _init.tcl_ is
@@ -45,8 +46,19 @@ present.
 
 # Specification
 
-There shall be new commands added to safe interpreters within Tcl. All of which
-shall be in the **::zipfs** namespace. These commands shall include:
+There shall be new ensemble **zipfs** added to tcl. That ensemble will
+contain several commands including:
+
+ * **zipfs canonical** _filename_
+
+      > Returns the a string representing where _filename_ would be located
+      > within zipfs.
+
+ * **zipfs exists** _filename_
+
+      > Returns true if a file exists in zipfs. Unlike _file exists_
+      > this command is safe to run in a safe interp, because it confers
+      > no access to the local file system.
 
  * **zipfs mount** ?_archive_? ?_mountpoint_?
 
@@ -59,9 +71,41 @@ shall be in the **::zipfs** namespace. These commands shall include:
      > Return the root mount point for Zipfs file systems. On windows this returns **zipfs:/**.
      > On all other platforms this returns **//zipfs:/**
 
+
+ * **zipfs tcl_library**
+
+     > Search the current executable, the tcl dynamic library, and the local file system
+     > for a zipfs file system containing Tcl's init.tcl file. Returns null if none was found.
+
  * **zipfs unmount** _archive_
 
      > Unmounts the ZIP file _archive_, which must have been previously mounted.
+
+Outside of a save interpreter, the following additional commands will be available:
+
+ * **zipfs lmkimg** _outfile_ _inlist_ ?strip? ?_password_? ?infile?
+
+     > Generate a zip archive (_outfile_) from a list of files (_inlist_),
+     > as a self extracting executable appended to a bare executable (_infile_).
+     >
+     > If _strip_ is given, that string will be removed from the front of all files
+     > before generating their names within the archive.
+     >
+     > If _password_ is given, the file will be encrypted with that passphrase
+
+ * **zipfs lmkzip** _outfile_ _inlist_ ?strip? ?_password_?
+
+     > Generate a zip archive (_outfile_) from a list of files (_inlist_).
+
+ * **zipfs mkzip** _outfile_ _indir_ ?strip? ?_password_?
+
+     > Generate a zip archive (_outfile_) from the contents of a directory (_indir_)
+
+ * **zipfs mkimg** _outfile_ _indir_ ?strip? ?_password_? ?infile?
+
+     > Generate a zip archive (_outfile_) from the contents of a directory (_indir_),
+     > as a self extracting executable appended to a bare executable (_infile_).
+
 
 ## VFS Mount Point
 
@@ -70,7 +114,8 @@ under *//zipfs:/*. Some operating systems (past or future) may have a special me
 for this style path. To that end, it may be changed to address the needs of the
 specific environment. Which root is being used for
 the current platform can be accessed via a call to **zipfs root**. For the remainder
-of this document, the mount point for zipfs will be referred to a **ZIPFS\_ROOT**.
+of this document, references to *//zipfs:/* are also intended to referred to whatever
+the prefix designated by **ZIPFS\_ROOT** actually is.
 
 Volumes may be mounted at any point under
 **ZIPFS\_ROOT**, and if a mount point does not start with **ZIPFS\_ROOT** the path will be
@@ -85,15 +130,116 @@ load their own zipfs implementation using the conventional shims provided for ki
 The function names for the core implementation have been modified to not conflict with
 zipfs implementations that are out in the wild.
 
+## Generating Task Executables Tclsh/Wish
+
+If tclsh/wish detect that the executable has a zip archive attached, the executable will be
+mounted as **ZIPFS\_ROOT**_/app_. If **ZIPFS\_ROOT**_/app/main.tcl_ exists, that file is marked
+set the shell's startup script. If **ZIPFS\_ROOT**_/app/tcl\_library/_ exists, it will be
+searched for init.tcl.
+
+The way to produce an executable will be as follows (Assuming the source for the application
+is at ~/myapp/src:
+
+From Tcl:
+
+    > zipfs mkimg ~/bin/myapp.exe ~/myapp/src ~/myapp/src ~/bin/tclsh87.exe
+
+From Unix:
+
+    > cd ~/myapp/src
+    > zip -r ~/myapp.zip .
+    > cd ..
+    > cp ~/bin/tclsh87.exe myapp.exe
+    > cat myapp.zip >> myapp.exe
+
+## First argument handling for Tclsh/Wish
+
+If the first argument to Tclsh or Wish is detected to be a zipfile, that file will be
+mounted as **ZIPFS\_ROOT*_/app_. If **ZIPFS\_ROOT**_/app/main.tcl_ exists, that file is marked
+set the shell's startup script. If **ZIPFS\_ROOT**_/app/tcl\_library_ exists, it will be
+searched for init.tcl.
+
+## New Tclsh features for TEA
+
+To assist in packaging extensions, **tclsh** will take on a new command _install_. If
+_install_ is the first argument, set subsequent arguments are passed to a new file
+in library **install.tcl**.
+
+**tclsh install** with no arguments is designed to return immediately with a normal return code,
+thus making it easy to test if a tclsh is tip430 Savvy but running in autoconf:
+
+    > AS_IF([$TCLSH_PROG install],[
+    >  ZIP_PROG=${TCLSH_PROG}
+    >  ZIP_PROG_OPTIONS="install mkzip"
+    >  ZIP_PROG_VFSSEARCH="."
+    >  AC_MSG_RESULT([Can use Native Tclsh for Zip encoding])
+    > ])
+
+This tip only defines 2 function for install:
+
+ * **tclsh install mkzip**.
+
+    > This command is a passthrough to the **zipfs mkzip** command, and allows
+    > tclsh to operate as zip encoder from make.
+
+ * **tclsh install mkimg**.
+
+    > This command is a passthrough to the **zipfs mkimg** command, and allows
+    > tclsh to operate as zip encoder from make.
+
+ * **tclsh install copyDir** _source_ _destination_
+
+    > This command will recursively copy the file structure of _source_
+    > to _destination_
+
+ * **tclsh install installDir** _source_ _destination_
+
+    > This command will recursively copy the file structure of _source_
+    > to _destination_, deleting _destination_ if it already exists, and
+    > marking all files copies as read-only.
+
+ * **tclsh install pkgindex_path** _path_ ?_path_...?
+
+    > Index all of the paths specified and generate a script that can
+    > be sourced to feed all of the __package ifneeded__ statements
+    > to an interpreter in one shot. Useful for indexing VFS file systems
+    >
+    > example:
+
+    tclsh install copyDir ~/myapp/src myapp.vfs
+    tclsh install pkgindex_path myapp.vfs > myapp.vfs/pkgIndex.tcl
+
+## Package loading
+
+Calls to **tcl_findLibrary** will now search through loaded packages to see if
+the dynamic library for the package in question has an attached zip file system. If that
+file system exists, it is mounted to **ZIPFS\_ROOT**_/lib/_**PGKNAME**, and that mount
+point is added to the list of directories to search.
+
 # Implementation
 
-I have adapted Richard Hipp's work on Tcl As One Big Executable \(TOBE\) to
-operate inside of a modern Tcl. That implementation consists of one C file
+This work is largely adapted Richard Hipp's work on Tcl As One Big Executable \(TOBE\).
+The concept has been modernized, somewhat, as well as heavily influenced by improvements
+made to it through the FreeWrap and Androwish projects. That implementation consists of one C file
 \(_tclZipvfs.c_\).  I have also prepared a set of kit-like behaviors for the
 core to express when tclAppInit.c is not compiled with a **TCL\_LOCAL\_MAIN\_HOOK**
 defined. Those behaviors reside in the *TclZipfs_AppHook\(\)* function.
 
 This work is checked in as the "_core\_zip\_vfs_" branch on both Tcl and Tk.
+
+
+## Modifications to auto.tcl
+
+*auto.tcl* now has rules for scanning DLLs for zip file systems.
+
+## Modifications to minizip.c
+
+*minizip* has been modified to be able to handle recursive directory arguments.
+
+## Modifications to tclAppInit.c
+
+*tclAppInit.c* will now call *TclZipfs_AppHook\(\)* if no **TCL\_LOCAL\_MAIN\_HOOK** was defined.
+
 
 ## Modifications to tclBasic.c
 
@@ -101,18 +247,14 @@ This work is checked in as the "_core\_zip\_vfs_" branch on both Tcl and Tk.
 portions of C needed to implement zipfs as well as inject the zipfs command into the
 interpreter.
 
+## Modifications to tclFileName.c
+
+*tclFileName.c* has a minor patch to exclude the prefix **//** from local file searches.
+
 ## New C File tclZipFS.c
 
 This file is a self-contained implementation in C of a zip based VFS. It includes all
 functions needed for implementing zipfs.
-
-## Modifications to tclAppInit.c
-
-*tclAppInit.c* will now call *TclZipfs_AppHook\(\)* if no **TCL\_LOCAL\_MAIN\_HOOK** was defined.
-
-## Modifications to tclFileName.c
-
-*tclFileName.c* has a minor patch to exclude the prefix **//** from local file searches.
 
 ## Modifications to tclIOUtil.c
 
@@ -123,14 +265,21 @@ with impunity.
 
 ## Modifications to the Tcl build system
 
-Tcl will now build a copy of the **minizip** program, whose source is currently distributed
+Tcl will now attempt to find a zip encoder in the environment. If a tip430 savvy tclsh is
+discovered, that shell will be used. Failing that, the system will search for an executable
+named **zip**. Failing that, tcl will build it's own zip encoder.
+
+When it cannot locate a zip encoded in the environment, Tcl will now build a copy of the
+**minizip** program, whose source is currently distributed
 in */compat/zlib/contrib/minizip*. The *tcl.m4* macro now detects if the compiler used
 can produce native native executables, and in cases where it cannot, will search for
 a C compiler that can, an substitute that value into the Makefile as **HOST_CC**. The C compiler
 will generate a native executable **minizip** which will be compiled in the same directory
 as tcl, and be used for all archive creation.
 
-A new build target **libtcl\_**_MAJOR__MINOR__PATCHLEVEL_**.zip** is
+## New build product libtcl.zip
+
+A new build target **libtcl\_**_MAJOR\_MINOR\_PATCHLEVEL_**.zip** is
 created from the **/library** directory in the tcl sources. For static library installs,
 this archive is copied to the tcl standard install location. For shared library builds this
 archive is appended to the dynamic library.
@@ -142,6 +291,21 @@ the presence of an adjacent file *pkgIndex.tcl*. That file contains all of the *
 calls to direct the core to find the core distributed packages relative to location of
 **tcl_library**. Unlike other **pkgIndex.tcl** files, this file must be manually maintained
 and kept up to date as package names and versions change, are added, or removed.
+
+## Modifications to the tclConfig.sh and TEA
+
+A new field **TCL_ZIP_FILE** will indicate the name of the zip archive generated by the build
+system. If this field is present and the value is non-blank, extensions (for instance Tk)
+can use this to infer the core was built with ZipFs support.
+
+TEA extensions which detect a non-blank value for **TCL_ZIP_FILE** will generate a value
+**TCL_ZIPFS_SUPPORT=1** when compiling as a shared library, and **TCL_ZIPFS_SUPPORT=2**
+when compiling as a static library.
+
+## Modifications to Tk
+
+Tk will scan tclConfig.sh, and if it detects a non-blank value for **TCL_ZIP_FILE**, it
+will make a call to *TclZipfs_AppHook\(\)* if no **TK\_LOCAL\_MAIN\_HOOK** was defined.
 
 # C API
 
