TIPs 482 and 483 now ready for discussion.

--- a/tip/482.md
+++ b/tip/482.md
@@ -6,7 +6,7 @@
 	Created:        03-Nov-2017
 	Post-History:   
 	Keywords:       Tk, demos, configuration
-	Tcl-Version:    8.7
+	Tcl-Version:    8.6.8
 -----
 # Abstract
 
@@ -29,11 +29,29 @@ and have this propagate through the build system.
 
 * Record the configured demo directory in tkConfig.sh, tk.pc and `::tk::pkgconfig`.
 
+# Platform Considerations
+
+* Unix, MacOSX
+ * This TIP works as described.
+* Windows
+ * This TIP works as described however saved configuration information is generally
+   less useful on Windows because Tk is almost never installed into the same
+   directories that are recorded in the pre-built files.
+
+# Current Uncertainties as of 2017/11/21:
+* The function GetWidgetDemoPath in macosx/tkMacOSXMenus.c uses a different method
+  to retrieve the value of the widget demo path. Is this ok?
+* Only tested on Unix.
+
 # Reference Implementation
 
 The reference implementation is available in the tk-stu-pkg branch. <http://core.tcl.tk/tk/timeline?r=tk-stu-pkg>
 
 The code is licensed under the same license as Tk.
+
+# See Also
+
+TIP #483 [[483]](483.md): Improved TIP #59 implementation for Tk.
 
 # Copyright
 
