--- a/tip/483.md
+++ b/tip/483.md
@@ -6,7 +6,7 @@
 	Created:        03-Nov-2017
 	Post-History:   
 	Keywords:       Tk, configuration
-	Tcl-Version:    8.7
+	Tcl-Version:    8.6.8
 -----
 # Abstract
 
@@ -22,15 +22,46 @@ requiring a `[catch]`-wrapping of any `[::tk::pkgconfig get fontsystem]` calls.
 
 # Proposal
 
-* Use the value _x11_ for the _fontsystem_ key if xft wasn't enabled at configure-time,
+* Add to `::tk::pkgconfig` a group of keys/values analogous to those provided by Tcl.
 
-* Add to `::tk::pkgconfig` a group of keys/values analagous to those provided by Tcl.
+* Make the _fontsystem_ key ever-present and use the following to determine its value:
+
+<pre>
+    #if defined(_WIN32) || defined(__CYGWIN__)
+    #  define CFG_FONTSYSTEM	"gdi"
+    #elif defined(MAC_OSX_TK)
+    #  define CFG_FONTSYSTEM	"xft"
+    #elif defined(HAVE_XFT)
+    #  define CFG_FONTSYSTEM	"xft"
+    #else
+    #  define CFG_FONTSYSTEM	"x11"
+    #endif
+</pre>
+
+# Platform Considerations
+
+* Unix, MacOSX
+ * This TIP works as described.
+* Windows
+ * This TIP works as described however saved configuration information is generally
+   less useful on Windows because Tk is almost never installed into the same
+   directories that are recorded in the pre-built files.
+
+# Current Uncertainties as of 2017/11/21:
+* Is it necessary to always provide the _fontsystem_ key?
+  Not all **Tcl** platforms provide all the same tcl::pkgconfig keys.
+  Should Tcl's example be followed?
+* Only tested on Unix.
 
 # Reference Implementation
 
 The reference implementation is available in the tk-stu-pkg branch. <http://core.tcl.tk/tk/timeline?r=tk-stu-pkg>
 
 The code is licensed under the same license as Tk.
+
+# See Also
+
+TIP #482 [[482]](482.md): Record Tk demo directory information.
 
 # Copyright
 
