TIPs 482,483: Adjust Windows note. Add configuration specification. Update Uncertainties.

--- a/tip/482.md
+++ b/tip/482.md
@@ -6,7 +6,7 @@
 	Created:        03-Nov-2017
 	Post-History:   
 	Keywords:       Tk, demos, configuration
-	Tcl-Version:    8.6.8
+	Tcl-Version:    8.7
 -----
 # Abstract
 
@@ -34,8 +34,8 @@ and have this propagate through the build system.
 * Unix, MacOSX
  * This TIP works as described.
 * Windows
- * This TIP works as described however saved configuration information is generally
-   less useful on Windows because Tk is almost never installed into the same
+ * This TIP works as described however saved configuration information about directories
+   is generally less useful on Windows because Tk is almost never installed into the same
    directories that are recorded in the pre-built files.
 
 # Current Uncertainties as of 2017/11/21:
