TIP 487: Stop support for Pre-XP Windows

--- a/tip/485.md
+++ b/tip/485.md
@@ -53,6 +53,8 @@ The following C macros don't serve any purpose any more, they will be removed in
    * `TCL_VARARGS_START` (just use `va_start()`)
    * `_ANSI_ARGS_` (just use `(` and `)`)
    * `VOID`, `CHAR`, `SHORT`, `LONG` (windows-only, just use lower-case variant)
+   * `TCL_PARSE_PART1` (flag for variable-related functions, has no effect any more)
+   * `__WIN32__`, `WIN32` (just use `_WIN32`)
 
 Minor note: The macro `CONST86` is still kept, as this can be used
 for extensions wanting to keep compatibility with Tcl 8.5. This macro
