--- a/tip/487.md
+++ b/tip/487.md
@@ -1,4 +1,4 @@
-# TIP 487: Stop support for Windows XP and Windows CE 
+# TIP 487: Stop support for Pre-XP Windows 
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -10,35 +10,43 @@
 
 # Abstract
 
-Windows XP is end-of-life since 2014, april 8 (Windows XP enbedded since 2016, january 12).
 Windows CE will be end-of-life in 2018, june 9 (See:
 [here](http://rfsmart.com/blog/hardware-tip-operating-systems-end-of-life). This is
-still about half a year away, but it seems counter-productive to support XP and CE
-for a new minor Tcl release: It's unlikely that any Windows CE or XP user would like
+still about half a year away, but it seems counter-productive to support Pre-XP Windows
+for a new minor Tcl release: It's unlikely that any Pre-XP Windows user would like
 to spend effort to upgrade Tcl from 8.6 to 8.7 on such a device. Tcl 8.6.8 and later
-will continue to support Windows XP and CE, this TIP only proposes to stop support
-for Tcl 8.7 and later.
+will continue to support older Windows releases, this TIP only proposes to stop
+support for Tcl 8.7 and later.
 
 # Proposed Change
 
-Although the abstract says it all, at this moment there is only one function used
-by Tcl which is only available on Vista and higher: This is `CancelSynchronousIo()`.
-Therefore, it is not really necessary to do any checks at Tcl startup: If the
-function `CancelSynchronousIo()` is not available in the OS, Tcl 8.7 will refuse to
-startup anyway. The implementation merely drops the runtime-checks for the
-availability of this function.
+Although the abstract says it all, the main change in Tcl is that it won't
+startup anymore when TclWinGetPlatformId() returns something else than
+VER_PLATFORM_WIN32_NT (2). This allows TclWinGetPlatformId() to be
+implemented as a macro (but the stub entry will be kept for all future 8.x
+releases). In Tcl 9.0, TclWinGetPlatformId() will be removed completely.
 
-A "core-8-for-xp" branch will be created alongside "core-8-branch". Anyone (with
-access rights, of course) can merge "core-8-branch" changes to "core-8-for-xp".
-This branch will keep working on Windows XP, as long as people desire.
-
-For Tk 8.7, the same will be done. There the Vista-specific function used is
-`SHCreateItemFromParsingName()`.
+For Tk 8.7, the same will be done: TkWinGetPlatformId() will be
+implemented as a macro, always returning VER_PLATFORM_WIN32_NT (2).
+In Tk 9.0, TclWinGetPlatformId() will be removed completely. It turns
+out that Tk benefits a lot more from removal of pre-XP parts: Mainly
+the XP theme engine (part of ttk), has a lot of runtime checks making
+it work on pre-XP machines. All of those runtime checks can be removed.
+This means that Tk 8.7 will no longer compile and run when uxtheme.dll
+is not available on your system. Windows XP and later will be OK.
 
 # Implementation
 
 An implementation of this TIP can be found in the [tip-487](https://core.tcl.tk/tcl/timeline?r=tip-487) branch.
+Tk has a [tip-487](https://core.tcl.tk/tk/timeline?r=tip-487) branch as well.
 
+# Rejected Alternatives
+
+Originally, XP-support was suggested to be removed as well, but it turns out
+that it's too early to do that now and gives too little benefit. Since XP
+seems to be even more popular than Vista, support for both of those could
+be done at the same time in a future Tcl/Tk release. But that decision will
+be left up to another TIP. 
 
 # Copyright
 
