--- a/tip/487.md
+++ b/tip/487.md
@@ -21,14 +21,14 @@ support for Tcl 8.7 and later.
 # Proposed Change
 
 Although the abstract says it all, the main change in Tcl is that it won't
-startup anymore when TclWinGetPlatformId() returns something else than
-VER_PLATFORM_WIN32_NT (2). This allows TclWinGetPlatformId() to be
+startup anymore when `TclWinGetPlatformId()` returns something else than
+`VER_PLATFORM_WIN32_NT` (2). This allows `TclWinGetPlatformId()` to be
 implemented as a macro (but the stub entry will be kept for all future 8.x
-releases). In Tcl 9.0, TclWinGetPlatformId() will be removed completely.
+releases). In Tcl 9.0, `TclWinGetPlatformId()` will be removed completely.
 
-For Tk 8.7, the same will be done: TkWinGetPlatformId() will be
-implemented as a macro, always returning VER_PLATFORM_WIN32_NT (2).
-In Tk 9.0, TclWinGetPlatformId() will be removed completely. It turns
+For Tk 8.7, the same will be done: `TkWinGetPlatformId()` will be
+implemented as a macro, always returning `VER_PLATFORM_WIN32_NT` (2).
+In Tk 9.0, `TkWinGetPlatformId()` will be removed completely. It turns
 out that Tk benefits a lot more from removal of pre-XP parts: Mainly
 the XP theme engine (part of ttk), has a lot of runtime checks making
 it work on pre-XP machines. All of those runtime checks can be removed.
