--- a/tip/485.md
+++ b/tip/485.md
@@ -48,12 +48,12 @@ The following C macros don't serve any purpose any more, they will be removed in
    * `CONST84_RETURN` (just use `const`)
    * `CONST84` (just use `const`)
    * `CONST` (just use `const`)
-   * `INLINE` (just use remove it)
+   * `INLINE` (just remove it)
    * `TCL_RESULT_SIZE` (use `TCL_DSTRING_STATIC_SIZE` in stead, if you really have to)
    * `TCL_VARARGS` (just use `...`)
    * `TCL_VARARGS_DEF` (just use `...`)
    * `TCL_VARARGS_START` (just use `va_start()`)
-   * `_ANSI_ARGS_` (just use `(` and `)`)
+   * `_ANSI_ARGS_` (just use '(' and ')')
    * `VOID`, `CHAR`, `SHORT`, `LONG` (windows-only, just use lower-case variant)
    * `TCL_PARSE_PART1` (flag for variable-related functions, has no effect any more)
    * `__WIN32__`, `WIN32` (just use `_WIN32`)
@@ -63,7 +63,9 @@ for extensions wanting to keep compatibility with Tcl 8.5. This macro
 will become DEPRECATED in Tcl 9.0, but will not be removed yet.
 
 The following types don't serve any purpose any more, they will be removed in Tcl 9.0:
+
    * `Tcl_ValueType` (enum, used by deprecated math-related functions)
+
    * `Tcl_Value`  (struct, used by deprecated math-related functions)
 
 The function `Tcl_Backslash` is superseded by `Tcl_UtfBackslash`
