Votin on TIPs #477 and #487 now in progress, until [clock format 1512648000] (Thu Dec 07 12:00 UCT 2017)

--- a/tip/487.md
+++ b/tip/487.md
@@ -1,8 +1,8 @@
 # TIP 487: Stop support for Pre-XP Windows 
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        20-Nov-2017
 	Post-History:   
 	Tcl-Version:    8.7
