--- a/tip/477.md
+++ b/tip/477.md
@@ -1,8 +1,8 @@
 # TIP 477: Modernize the nmake build system
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        30-Sep-2017
 	Post-History:
 	Keywords:       Windows nmake build
