Update the table of contents for TIP 488

--- a/tip/488.md
+++ b/tip/488.md
@@ -8,7 +8,17 @@
 	Keywords:       Tcl, string representation, floating-point
 	Tcl-Version:    9.0
 -----
-# Abstract
+<!-- TOC BEGIN (auto generated with tiptoc) -->
+* <a href='#toc-2'>Abstract</a>
+* <a href='#toc-3'>Rationale</a>
+* <a href='#toc-4'>Proposal</a>
+* <a href='#toc-5'>Compatibility considerations</a>
+* <a href='#toc-6'>Reference Implementation</a>
+* <a href='#toc-7'>See Also</a>
+* <a href='#toc-8'>Copyright</a>
+
+<!-- TOC END -->
+# <a id='toc-2'></a>Abstract
 
 Currently, Tcl supports a magic variable `tcl_precision` that is used in the
 implicit formatting of floating-point numbers to string representation. It was
@@ -16,7 +26,7 @@ introduced a long time ago as a means to speed up such conversion, but it has
 lost all usefulness since the introduction of the magic value "0" in TIP 132.
 This TIP proposes to remove the variable altogether.
 
-# Rationale
+# <a id='toc-3'></a>Rationale
 
 Tcl has long relied on the value of the magic variable `tcl_precision` to convert
 floating-point number to strings that are readable by human beings. Its origin
@@ -41,13 +51,13 @@ the cause for confusion of novice Tcl programmers in the past and in recent time
 Now that we are cleaning up the code base for Tcl 9, time has come to remove this
 relic as well.
 
-# Proposal
+# <a id='toc-4'></a>Proposal
 
 * Remove the variable as a magic variable from all source code.
 
 * Remove it from the manual pages. Instead recommend the use of `[format]` for this purpose.
 
-# Compatibility considerations
+# <a id='toc-5'></a>Compatibility considerations
 
 The variable has had no justifiable use since Tcl 8.5. The TIP proposing its
 practical deprecation was created in 2003, so 14 years ago.
@@ -58,14 +68,15 @@ string to floating-point, then of course, differences may occur as well, but the
 be viewed as bugs in the original code, as a value for `tcl_precision` unequal to zero and
 smaller than 17, will not guarantee a lossless conversion to and from strings.
 
-# Reference Implementation
+# <a id='toc-6'></a>Reference Implementation
 
 None yet.
 
-# See Also
+# <a id='toc-7'></a>See Also
 
 TIP #132: Revised Floating-Point Conversions in Tcl
 
-# Copyright
+# <a id='toc-8'></a>Copyright
 
 This document has been placed in the public domain.
+
