Accepted 4/0/3: YES: 4 (Griffin, Kenny, Nijtmans, Vogel) No: -. PRESENT: 3 (English, Kupries, Landers). Vote conclusion email was sent 25-Nov-2017 to Tcl Core list. Implementation was merged same day.

--- a/tip/161.md
+++ b/tip/161.md
@@ -1,9 +1,9 @@
 # TIP 161: Change Default for Menu's -tearoff Option to False
 	Author:         Mark Roseman <mark@markroseman.com>
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        19-Oct-2003
 	Post-History:   
 	Tcl-Version:    8.7
