--- a/tip/487.md
+++ b/tip/487.md
@@ -44,7 +44,7 @@ Tk has a [tip-487](https://core.tcl.tk/tk/timeline?r=tip-487) branch as well.
 
 Originally, XP-support was suggested to be removed as well, but it turns out
 that it's too early to do that now and gives too little benefit. Since XP
-seems to be even more popular than Vista, support for both of those could
+seems to be even more popular than Vista, support drop for both of those could
 be done at the same time in a future Tcl/Tk release. But that decision will
 be left up to another TIP. 
 
