Added patch for TIP 488 (remove tcl_precision)

--- a/tip/488.md
+++ b/tip/488.md
@@ -70,7 +70,7 @@ smaller than 17, will not guarantee a lossless conversion to and from strings.
 
 # <a id='toc-6'></a>Reference Implementation
 
-None yet.
+A [patch](../assets/tip488.patch) is available.
 
 # <a id='toc-7'></a>See Also
 
