Correct email adress - overlooked that when writing the TIP

--- a/tip/488.md
+++ b/tip/488.md
@@ -1,5 +1,5 @@
 # TIP 488: Remove tcl_precision
-	Author:         Arjen Markus <stwo@users.sourceforge.net>
+	Author:         Arjen Markus <arjenmarkus@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
