Voting started, ending [clock format 1513252800] (Thu Dec 14 12:00 UCT 2017)

--- a/tip/488.md
+++ b/tip/488.md
@@ -1,8 +1,8 @@
 # TIP 488: Remove tcl_precision
 	Author:         Arjen Markus <arjenmarkus@users.sourceforge.net>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        24-Nov-2017
 	Post-History:
 	Keywords:       Tcl, string representation, floating-point
@@ -70,7 +70,7 @@ smaller than 17, will not guarantee a lossless conversion to and from strings.
 
 # <a id='toc-6'></a>Reference Implementation
 
-A [patch](../assets/tip488.patch) is available.
+A [branch](http://core.tcl.tk/tcl/timeline?r=tip-488) is available.
 
 # <a id='toc-7'></a>See Also
 
