Add the man page for 'canvas image' in TIP #489

--- a/tip/489.md
+++ b/tip/489.md
@@ -19,7 +19,18 @@ The canvas is an amazing tool or drawing and managing graphical objects. One thi
 
 The original application for canvas image was to render a printer page at 300dpi, which involves a canvas perhaps approximately 3300px high and as much as approximately 2400px wide. For this reason the extension was given the ability to draw even when the canvas is unmapped, providing one of the ancestors is mapped.
 
-An optional subsample and zoom paramter can be specified, and the Tk_PhotoPutZoomedBlock() will be used to draw into the Tk image instead of the Tk_PhotoPutBlock(). The boundaries of the region drawn are set by the canvas -scrollregion boundaries, and if one hasn't been defined then the canvas width and height with an origin of 0,0 is used.
+An optional subsample and zoom parameter can be specified, and the Tk_PhotoPutZoomedBlock() will be used to draw into the Tk image instead of the Tk_PhotoPutBlock(). The boundaries of the region drawn are set by the canvas -scrollregion boundaries, and if one hasn't been defined then the canvas width and height with an origin of 0,0 is used.
+
+# Documentation
+
+The following is an extract from the man page for the image widget command:
+
+pathName image imagename ?subsample? ?zoom?
+    Draw the canvas into the Tk photo image named imagename.  If a -scrollregion has been set then this will define the boundaries of the canvas region drawn and
+    the final size of the photo image.  Otherwise the widget width and height with an origin of 0,0 will define the size of the canvas region drawn and the final
+    size of the photo image.  Optionally an integer subsample factor may be given and the photo image will be reduced in size. In addition to  the  subsample  an
+    integer zoom factor can also be given and the photo image will be enlarged. The image background will be filled with the canvas background colour. The canvas
+    widget does not need to be mapped for this widget command to work, but at least one of it's ancestors must be mapped.  This command returns an empty string.
 
 # Examples
 
