--- a/tip/487.md
+++ b/tip/487.md
@@ -1,8 +1,8 @@
 # TIP 487: Stop support for Pre-XP Windows 
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        20-Nov-2017
 	Post-History:   
 	Tcl-Version:    8.7
